--- a/report_and_presentation/content_report/shortcuts.sty
+++ b/report_and_presentation/content_report/shortcuts.sty
@@ -11,6 +11,12 @@
 %---------------------
 \usepackage{algorithm}
 \usepackage{algorithmic}
+
+%---------------------
+%  TABLES
+%---------------------
+\usepackage{tabularx}
+
 %---------------------
 %    FIGURES
 %---------------------
